# ai-novel

./: .dockerignore  .env.example  .gitignore  Dockerfile  MIGRATION_GUIDE.md  README.md  docker-compose.yml  main.py  project_status_report_20250711_172200.md  pyproject.toml  requirements.txt  run_novel_workflow.bat  run_novel_workflow.ps1  start.sh  test_graph.py  test_streaming.py
.promptx/: .xml-upgrade-backup-done  pouch.json
.promptx/backup/backup_1752117692709/: backup-meta.json
.promptx/memory/ai-novel-architect/: declarative.dpml
.promptx/resource/: project.registry.json
.promptx/resource/domain/python-ai-developer/: python-ai-developer.role.md
.promptx/resource/domain/python-ai-developer/execution/: agent-development-workflow.execution.md  database-optimization.execution.md
.promptx/resource/domain/python-ai-developer/thought/: performance-optimization.thought.md  python-ai-expertise.thought.md
.promptx/resource/role/ai-novel-architect/: ai-novel-architect.role.md
.promptx/resource/role/ai-novel-architect/execution/: architecture-design.execution.md
.promptx/resource/role/ai-novel-architect/thought/: system-architecture.thought.md  technical-innovation.thought.md
.promptx/resource/role/ai-novel-python-dev/: ai-novel-python-dev.role.md
.promptx/resource/role/ai-novel-python-dev/execution/: ai-novel-development.execution.md
.promptx/resource/role/ai-novel-python-dev/thought/: ai-integration.thought.md  python-development.thought.md
alembic/: env.py
alembic/versions/: 6e6b668300d8_initial_migration.py
app/: __init__.py  main.py
app/agent/: agent_init.py  agent_prompt.py
app/agents/: agent_init.py
app/api/: __init__.py  deps.py  novel_routes.py  routes.py
app/api/v1/: __init__.py  api.py  novels.py  stories.py  users.py
app/api/v1/endpoints/: __init__.py  stories.py  users.py
app/core/: config.py  database.py  logger.py  logging.py  redis_client.py  security.py
app/crew/: README.md  crew_agents.py  crew_flow.py  crew_llm.py  crew_tasks.py
app/crud/: __init__.py  base.py  chapter.py  choice.py  memory.py  story.py  user.py
app/graph/: README.md  __init__.py  character_extractor.py  config.py  graph_node.py  graph_workflow.py  models.py  neo4j_builder.py  relationship_analyzer.py
app/models/: __init__.py  base.py  chapter.py  choice.py  memory.py  novel.py  story.py  user.py
app/novel_generation/: README.md  llm_config.py  novel_agents.py  novel_memory.py  novel_workflow.py  prompt_manager.py
app/schemas/: agent_outputs.py  api.py  base.py  common.py  novel.py  story.py  user.py
app/services/: __init__.py  ai_factory.py  ai_service.py  gemini_service.py  llm_service.py  novel_service.py  ollama_service.py  story_service.py  user_service.py
app/services/ai/: __init__.py  base.py  choice_generator.py  memory_manager.py  mock_service.py  story_generator.py
app/utils/: security.py
docs/: api-design-coherence.md  docker-setup.md  implementation-plan.md  memory-system-implementation.md  python-quick-start.md  quick-start.md  story-coherence-design.md  technical-design.md
scripts/: project_status.py
