[project]
name = "ai-novel"
version = "0.1.0"
description = "AI Interactive Novel System with Multiple Genres"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.3",

    "pydantic>=2.11.6",
    "python-multipart>=0.0.6",
    "pydantic-settings>=2.9.1",
    "requests",
    "loguru",
    "python-dotenv",

    "crewai>=0.70.0",
    "crewai-tools>=0.12.0",
    "langchain-google-genai",
    "langchain-ollama",
    "chromadb>=0.4.0",
]


