[project]
name = "ai-novel"
version = "0.1.0"
description = "AI Interactive Novel System with Multiple Genres"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.3",

    "pydantic>=2.11.6",
    "python-multipart>=0.0.6",
    "pydantic-settings>=2.9.1",
    "requests",
    "loguru",
    "python-dotenv",

    "llama-index-core>=0.12.0",
    "llama-index-llms-openai>=0.3.0",
    "llama-index-llms-gemini>=0.3.0",
    "llama-index-llms-ollama>=0.3.0",
    "llama-index-workflows>=0.2.0",
]


