[project]
name = "ai-novel"
version = "0.1.0"
description = "AI-powered interactive novel platform with FastAPI, LlamaIndex, and ChromaDB"
readme = "README.md"
authors = [
    { name = "AI Novel Developer", email = "developer@ai-novel.com" }
]
requires-python = ">=3.9"
dependencies = [
    # Web框架
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    # 数据库
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.1",
    "psycopg2-binary>=2.9.9",
    # AI框架 - LlamaIndex生态
    "llama-index>=0.9.15",
    "llama-index-llms-gemini>=0.1.3",
    "llama-index-embeddings-jinaai>=0.1.2",
    "llama-index-vector-stores-chroma>=0.1.4",
    # 向量数据库
    "chromadb>=0.4.18",
    # Google AI
    "google-generativeai>=0.3.2",
    # 数据验证
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # 认证
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    # 工具
    "aiofiles>=23.2.1",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.3",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    # 测试工具
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.2",
    "pytest-cov>=4.1.0",
    "factory-boy>=3.3.0",

    # 代码质量
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",

    # 开发工具
    "pre-commit>=3.5.0",
]

[project.scripts]
ai-novel = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app", "tests"]

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
